# scPepato

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: column_info.csv  screens.csv
scripts/: build_data_dictionary.py  compare_spaces.py  compute_pca.py  inspect_data.py  prepare_visualizer_data.py  run_embedding.py  run_visualizer.py  test_all_screens.py  train_vae.py
slurm/: sweep_beta.sh  train_all_vaes.sh  train_vae.sbatch
src/scpepato/: __init__.py
src/scpepato/analysis/: __init__.py  batch_effects.py  responders.py
src/scpepato/data/: __init__.py  features.py  loader.py
src/scpepato/distances/: __init__.py  compare.py  metrics.py  testing.py
src/scpepato/embedding/: __init__.py  methods.py
src/scpepato/embeddings/: __init__.py  base.py  pca.py  vae.py
src/scpepato/models/: __init__.py  batch_vae.py  conditional_vae.py  training.py  vae.py
src/scpepato/viz/: __init__.py  images.py  interactive.py  plots.py
